--- a/index.html
+++ b/index.html
@@ -2,8 +2,141 @@
 <html>
   <head>
     <title>This is the title of the webpage!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <div class="container">
+      <div class="light-row">
+        <span class="star">Wishing you a lazy christmas!</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+        <span class="star">*</span>
+      </div>
+      <div class="light-row">
+        <span class="star">|</span>
+        <span class="star">|</span>
+      </div>
+      <div class="light-row">
+        <span class="star">|</span>
+        <span class="star">|</span>
+      </div>
+    </div>
   </body>
 </html>
